<resources>
    <string name="app_name">Your Calendar</string>
    <string name="MFname">Main Screen</string>
    <string name="username">UserName</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="Welcome">wel</string>
    <string name="Welcome1">Welcome</string>
    <string name="test_title">Test Title</string>
    <string name="event_details">New Event Details</string>
    <string name="time">Time</string>
    <string name="add_people">Add People</string>
    <string name="location">Location</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="event_name">Event Name</string>
    <string name="done">Done</string>
    <string name="edit_event">Edit Event</string>
</resources>