<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="196dp"
        android:layout_height="53dp"
        android:layout_marginEnd="108dp"
        android:text="@string/event_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="83dp" />

    <TextView
        android:layout_width="129dp"
        android:layout_height="49dp"
        android:layout_marginEnd="172dp"
        android:text="@string/time"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="248dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/location"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="423dp" />

    <ListView
        android:layout_width="298dp"
        android:layout_height="0dp"
        android:layout_marginEnd="48dp"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="587dp" />

    <Button
        android:layout_width="137dp"
        android:layout_height="53dp"
        android:text="@string/edit_event"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="606dp" />

</androidx.constraintlayout.widget.ConstraintLayout>